sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/Location_Demolition__c.object-meta.xml
<CustomObject>
    <description>Toilets that have been demolished in a given location</description>
    <label>Location Demolition</label>
    <nameField>
        <displayFormat>LD-{0000}</displayFormat>
        <label>Location Demolition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Demolitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>