sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Arrests_Made__c.field-meta.xml
<CustomField>
    <fullName>Arrests_Made__c</fullName>
    <description>Arrests Made of installation staff</description>
    <label>Arrests Made?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>