sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Demolished__c.field-meta.xml
<CustomField>
    <fullName>Demolished__c</fullName>
    <label>Demolished</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>