sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Demolished_Location__c.field-meta.xml
<CustomField>
    <fullName>Demolished_Location__c</fullName>
    <description>Demolished Location</description>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Location Demolitions</relationshipLabel>
    <relationshipName>Location_Demolitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>