sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Firm_Toilets__c.field-meta.xml
<CustomField>
    <fullName>Firm_Toilets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once checked, toilets cant be added</description>
    <inlineHelpText>Once checked, toilets cant be added</inlineHelpText>
    <label>Firm Toilets</label>
    <type>Checkbox</type>
</CustomField>