sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/FLO_Name_and_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>FLO_Name_and_Account_Name__c</fullName>
    <formula>Location_Demolitions_Opportunity_Name__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FLO Name and Account Name</label>
    <type>Text</type>
</CustomField>