sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Harrasment__c.field-meta.xml
<CustomField>
    <fullName>Harrasment__c</fullName>
    <description>Harrasment (of installaton staff)?</description>
    <label>Harrasment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>