sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Issue_Resolution_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Resolution_Description__c</fullName>
    <description>The description of the issue resolution</description>
    <label>Issue Resolution Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>