sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Length_of_stoppages__c.field-meta.xml
<CustomField>
    <fullName>Length_of_stoppages__c</fullName>
    <description>How long the stoppage will be</description>
    <label>Length of stoppages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than a day</fullName>
            </value>
            <value>
                <fullName>A day</fullName>
            </value>
            <value>
                <fullName>Less than 3 days</fullName>
            </value>
            <value>
                <fullName>Less than a week</fullName>
            </value>
            <value>
                <fullName>Less than a month</fullName>
            </value>
            <value>
                <fullName>Indefinate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>