sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Location_Demolitions_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Demolitions_Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Name of the Location Demolitions</description>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.Location__c</field>
            <operation>equals</operation>
            <valueField>$Source.Demolished_Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Location Demolitions</relationshipLabel>
    <relationshipName>Location_Demolitions</relationshipName>
    <type>Lookup</type>
</CustomField>