sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/No_of_Toilets__c.field-meta.xml
<CustomField>
    <fullName>No_of_Toilets__c</fullName>
    <description>The number of demolished toilets</description>
    <label>No. of Toilets</label>
    <summaryForeignKey>Location_Demolition_Toilets__c.Location_Demolition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>