sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Number_of_Toilets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Toilets__c</fullName>
    <formula>Location_Demolitions_Opportunity_Name__r.of_Toilets_at_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Toilets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>