sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Reason_for_demolition__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_demolition__c</fullName>
    <label>Reason for demolition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Land ownership dispute</fullName>
            </value>
            <value>
                <fullName>Lack of notification/consultation</fullName>
            </value>
            <value>
                <fullName>Business competition</fullName>
            </value>
            <value>
                <fullName>Demand for payments/handout</fullName>
            </value>
            <value>
                <fullName>Lack of consensus</fullName>
            </value>
            <value>
                <fullName>Vandalism</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>