sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Reported_Demolition_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Demolition_Date__c</fullName>
    <label>Reported Demolition Date</label>
    <type>Date</type>
</CustomField>