sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Reported_Stoppage_date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Stoppage_date__c</fullName>
    <label>Reported Stoppage date</label>
    <type>Date</type>
</CustomField>