sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demolished Toilet Addition</fullName>
                <default>true</default>
                <label>Demolished Toilet Addition</label>
            </value>
            <value>
                <fullName>Authority Reporting</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>