sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Stoppage_Demolished_by__c.field-meta.xml
<CustomField>
    <fullName>Stoppage_Demolished_by__c</fullName>
    <label>Stoppage/Demolished by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chief</fullName>
            </value>
            <value>
                <fullName>Assistant Chief</fullName>
            </value>
            <value>
                <fullName>City County Enforcement Officials (askaris)</fullName>
            </value>
            <value>
                <fullName>Sub County Administrator</fullName>
            </value>
            <value>
                <fullName>Ward Administrator</fullName>
            </value>
            <value>
                <fullName>MCA (Ward/County representative)</fullName>
            </value>
            <value>
                <fullName>Land Owner/ Landlord</fullName>
            </value>
            <value>
                <fullName>City Stadium Management</fullName>
            </value>
            <value>
                <fullName>Kenya Railways Authority</fullName>
            </value>
            <value>
                <fullName>Police</fullName>
            </value>
            <value>
                <fullName>Kenya Pipeline Authority</fullName>
            </value>
            <value>
                <fullName>Village elder (Chairman)</fullName>
            </value>
            <value>
                <fullName>Tenants</fullName>
            </value>
            <value>
                <fullName>Neighbors and area residents</fullName>
            </value>
            <value>
                <fullName>Rowdy youth</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other (Add option to specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>