sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/fields/Stoppage_Encountered__c.field-meta.xml
<CustomField>
    <fullName>Stoppage_Encountered__c</fullName>
    <label>Stoppage Encountered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>