sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/recordTypes/External_Demolition_After_Toilet_Addition.recordType-meta.xml
<RecordType>
    <fullName>External_Demolition_After_Toilet_Addition</fullName>
    <active>true</active>
    <label>External Demolition - After Toilet Addition</label>
</RecordType>