sfSandBoxCode/force-app/main/default/objects/Location_Demolition__c/recordTypes/Internal_Demolition.recordType-meta.xml
<RecordType>
    <fullName>Internal_Demolition</fullName>
    <active>true</active>
    <description>Record type for internal toilet demolitions</description>
    <label>External Demolition - Before Toilet Addition</label>
</RecordType>